Fixed bug #38252 (Incorrect PDO error message on invalid default fetch mode).